edit layout dan main activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:text="@string/kertas"
-        android:textSize="25sp"
+        android:textColor="#FF9800"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
+        android:rotation="350"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -22,7 +26,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/gunting"
-        android:textSize="25sp"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif-light"
+        android:textColor="#4CAF50"
+        android:textStyle="bold"
+        android:rotation="350"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_kertas"/>
@@ -32,19 +40,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/batu"
-        android:textSize="25sp"
+        android:fontFamily="sans-serif-light"
+        android:textSize="30sp"
+        android:textColor="@color/purple_500"
+        android:textStyle="bold"
+        android:rotation="350"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_gunting"/>
 
     <TextView
         android:id="@+id/pemain1"
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:layout_marginStart="20dp"
         android:text="Pemain 1"
-        android:textSize="20sp"
+        android:fontFamily="sans-serif-light"
+        android:textStyle="bold"
+        android:textColor="@color/ic_paper_background"
+        android:textSize="22sp"
         android:gravity="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_batu"/>
@@ -56,7 +71,10 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="80dp"
         android:text="COM"
-        android:textSize="20sp"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/ic_paper_background"
+        android:textStyle="bold"
+        android:textSize="22sp"
         android:gravity="center"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_batu"/>
@@ -65,7 +83,7 @@
         android:id="@+id/pemain_batu"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="27dp"
         android:layout_marginTop="15dp"
         android:src="@drawable/batu"
         android:background="@color/white"
@@ -77,7 +95,7 @@
         android:id="@+id/com_batu"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="27dp"
         android:layout_marginTop="15dp"
         android:src="@drawable/batu"
         android:background="@color/white"
@@ -89,7 +107,7 @@
         android:id="@+id/pemain_kertas"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="27dp"
         android:layout_marginTop="15dp"
         android:src="@drawable/kertas"
         android:background="@color/white"
@@ -101,10 +119,13 @@
         android:id="@+id/tv_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Pemain 1\nMENANG!"
         android:layout_marginTop="80dp"
+        tools:text="Pemain 1\nMENANG!"
+        android:fontFamily="sans-serif-light"
         android:textSize="25sp"
+        android:textStyle="bold"
         android:gravity="center"
+        android:rotation="350"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -114,7 +135,7 @@
         android:id="@+id/com_kertas"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="27dp"
         android:layout_marginTop="15dp"
         android:src="@drawable/kertas"
         android:background="@color/white"
@@ -126,7 +147,7 @@
         android:id="@+id/pemain_gunting"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="27dp"
         android:layout_marginTop="15dp"
         android:src="@drawable/gunting"
         android:background="@color/white"
@@ -138,7 +159,7 @@
         android:id="@+id/com_gunting"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="27dp"
         android:layout_marginTop="15dp"
         android:src="@drawable/gunting"
         android:background="@color/white"
@@ -148,8 +169,8 @@
 
     <ImageView
         android:id="@+id/refresh_btn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_margin="10dp"
         android:src="@drawable/refresh"
         android:background="@color/white"
